[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sccmsqlclient"
version = "0.1.0"
description = "SCCM SQL client based on Impacket"
requires-python = ">=3.8"
dependencies = [
    "impacket",
    "requests",
    "requests_toolbelt",
    "tabulate"
]

[project.scripts]
sccmsqlclient = "sccmsqlclient:main"